--- a/pom.xml
+++ b/pom.xml
@@ -26,4 +26,14 @@
 		</plugins>
 	</build>
 
-</project>
+	<target name="runTests" description="Run JUnit tests">
+    <junit printsummary="yes" dir="test-classes" fork="true">
+        <classpath>
+            <pathelement location="inst-classes" />
+        </classpath>
+        <test name="xxx.AllNonGWTTestCaseTests" haltonfailure="no" outfile="result">
+            <formatter type="xml" />
+        </test>
+    </junit>
+</target>
+	</project>
